Fix issue with broken styles on browser zoom

--- a/resources/stylesheets/component/common/header.featured-actions.less
+++ b/resources/stylesheets/component/common/header.featured-actions.less
@@ -108,7 +108,7 @@ header{
 	content: "\e9f7";
 	font-weight: 700;
 	font-size: 1.325rem !important;
-	line-height: 1.3rem !important;
+	line-height: 1.325rem !important;
 }
 
 
