--- a/resources/stylesheets/component/common/mobile-more-menu.less
+++ b/resources/stylesheets/component/common/mobile-more-menu.less
@@ -11,6 +11,7 @@ body div.bs-mobile-more-menu {
 			font-family: 'entypo';
 			content: "\e999";
 			font-size: 2rem;
+			line-height: 3rem;
 			color: @mobile-more-menu-dropdown-color;
 			background-color: @mobile-more-menu-dropdown-bg-color;
 			border-radius: 1.5rem;
@@ -55,6 +56,7 @@ body div.bs-mobile-more-menu {
 				font-family: 'entypo';
 				content: "\e98d";;
 				font-size: 2rem;
+				line-height: 3rem;
 				background-color: transparent;
 				color: @mobile-more-menu-dropdown-bg-color;
 				background-color: @mobile-more-menu-dropdown-color;
