--- a/resources/stylesheets/component/mobile/header.mobile-notification-button.less
+++ b/resources/stylesheets/component/mobile/header.mobile-notification-button.less
@@ -1,14 +1,14 @@
 .mobile-notifications-button {
 	position: fixed;
 	top: 0;
-	padding: 0.5em 1em 0.2em 1em;
-	right: 3em;
+	padding: 0.5rem 1rem 0.2rem 1rem;
+	right: 3rem;
 
 	i.mobile-notifications-button::before {
 		font-family: 'entypo';
 		content: "\e97c";
 		font-style: initial;
-		font-size: 2em;
+		font-size: 2rem;
 		color: @menu-top-color;
 		float: left;
 		font-style: normal;
