--- a/resources/stylesheets/component/mobile/header.search.less
+++ b/resources/stylesheets/component/mobile/header.search.less
@@ -2,7 +2,7 @@ header.main-header .navbar {
 	a.mobile-search-button {
 		position: fixed;
 		top: 0;
-		padding: 0.3em 1em 0.2em 1em;
+		padding: 0.3rem 1rem 0.2rem 1rem;
 		right: 0.5em;
 	}
 
@@ -10,7 +10,7 @@ header.main-header .navbar {
 		font-family: 'entypo';
 		content: "\e9d9";
 		font-style: initial;
-		font-size: 2em;
+		font-size: 2rem;
 		color: @menu-top-color;
 		float: left;
 	}
